fix: no longer make assumption of slide vertical alignment

--- a/src/snap-slider.css
+++ b/src/snap-slider.css
@@ -18,6 +18,5 @@
 .rw-slide {
     display: inline-block;
     scroll-snap-align: start;
-    vertical-align: top;
     white-space: normal;
 }
